[package]
name = "columns"
version = "0.1.0"
edition = "2021"
author = "S0raWasTaken <s0ra@duck.com>"
license = "MIT"
repository = "https://github.com/S0raWasTaken/Columns"
description = "A text manipulation library for displaying separate text in columns."
keywords = ["column", "text", "fetch", "neofetch", "separated"]
documentation = "https://docs.rs/Columns"
homepage = "https://crates.io/crates/Columns"
readme = "README.md"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
